--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
+@font-face {
+    font-family: 'aspaceregular';
+    src: url(./fonts/aspace_demo-webfont.woff2)
+}
+
 :root {
     --logo-height: 100px;
+    --evil-space-corp-font: 'aspaceregular';
+    --widget-width: 350px;
+    --widget-height: 200px;
+    --header-text-width: 500px;
 }
 
 * {
@@ -29,7 +38,7 @@ img {
 
 #dash-nav {
     grid-row: 1 / -2;
-    background-color: blue;
+    background-color: rgb(10, 10, 10);
 
     display: grid;
     grid: var(--logo-height) 1fr / 1fr;
@@ -48,20 +57,40 @@ nav {
 }
 
 #dash-main {
+    padding: 20px;
+
     grid-area: 2 / 2 / -2 / -1;
     background-color: rgb(85, 77, 77);
 
     display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr;
-    grid-auto-flow: column;
+    grid-template-rows: var(--widget-height) var(--widget-height);
+    grid-template-columns: repeat(auto-fill, var(--widget-width));
+    grid-auto-rows: var(--widget-height);
+    gap: 20px;
+    align-content: center;
 }
 
 header {
     grid-area: 1 / 2 / 2 / -1;
     width: 100%;
     height: var(--logo-height);
-    background-color: antiquewhite;
+    background-color: rgb(17, 17, 17);
+
+    display: grid;
+    grid: 1fr / var(--header-text-width) 1fr;
+    justify-items: center;
+    align-items: center;
+
+    font-size: 1.5rem;
+    font-family: var(--evil-space-corp-font);
+    color: white;
+    text-decoration: underline silver;
+}
+
+header h1 {
+    font-size: 2rem;
+    width: var(--header-text-width);
+    text-align: center;
 }
 
 footer {
@@ -72,8 +101,23 @@ footer {
 
 /* ///////////////////////////////////////// */
 
-.card {
-    width: 100px;
-    height: 200px;
-    background-color: brown;
+.widget {
+    width: var(--widget-width);
+    height: var(--widget-height);
+    background-color: rgb(255, 255, 255);
+}
+
+.nav-link {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    padding: 1rem;
+
+}
+
+.nav-link>a:hover {
+    opacity: .7;
+}
+
+.current-page {
+    color: rgba(255, 255, 255, 0.467);
 }
